API: Изменения на hotel/ - Добавлена новый столбец в таблице door code. Она делается путем генерации или ручного ввода на стороне клиента - Доабвлена возможность own и all. Для разделение логики для админа и внешнего доступа (мобильного приложения)
